fix some dark mode and use proper button style

--- a/docs/.vitepress/theme/theme.css
+++ b/docs/.vitepress/theme/theme.css
@@ -1,3 +1,7 @@
 .vp-doc .preview-code summary {
   margin: initial;
 }
+
+body {
+  @apply bg-white dark:bg-gray-1000;
+}
